# CQUST_SMACK

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  config_template.toml  cqust_sm_2024.md  gm.js  prompt.json  solution_mapping.json
examples/: list_cache.rs  mk_answer.rs  mk_cache.rs  mk_solution.rs
src/: config.rs  lib.rs  llm.rs  main.rs  spider.rs
