[package]
name = "cqust_smack_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
reqwest = { version = "0.12.15", features = ["json", "cookies"] }
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.140"
sled = "0.34.7"
tokio = { version = "1.44.1", features = ["full"] }
