[package]
name = "cqust_smack_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
dashmap = "6.1.0"
features = "0.10.0"
futures = "0.3.31"
murmur3 = "0.5.2"
reqwest = { version = "0.12.15", features = ["json", "cookies","multipart"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
